# pqfe

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check-copyright.yml  ci.yml  push_docker_image.yml
benchmarks/: performance_benchmark.py  profiling_suite.py  run_profiling.sh  run_with_cores.sh
docs/: api.md  index.md  installation.md  security.md
src/: __init__.py  api.py  config.py  dilithium_signatures.py  file_ops.py  key_management.py  kyber_encryption.py  symmetric.py  utils.py
tests/: __init__.py  test_api.py  test_api_integration.py  test_encryption.py  test_file_ops.py  test_key_management.py  test_kyber_encryption.py  test_pqfe_encryptor.py  test_symmetric.py
